# dl-nzb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.claude/: settings.local.json
.github/workflows/: release.yml
src/: cli.rs  config.rs  error.rs  json_output.rs  lib.rs  main.rs  patterns.rs  progress.rs
src/download/: downloader.rs  mod.rs  nzb.rs
src/nntp/: connection.rs  mod.rs  pool.rs
src/processing/: deobfuscate.rs  file_extension.rs  mod.rs  par2.rs  par2_ffi.rs  par2repairer.cpp  post_process.rs  post_processor.rs  rar.rs
